--- a/index.html
+++ b/index.html
@@ -200,6 +200,34 @@
                 </div>
             </div>
         </div>
+         <!-- search page -->
+
+    <div class="search">
+        <input type="text" placeholder="Search" >
+        <div class="posts">
+            <div><img src="https://source.unsplash.com/random/1080x1080/?cars" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?animals" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?quotes" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?sky" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?space" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?planets" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?nature" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?mountains" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?citys" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?skyscrapers" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?coding" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?robots" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?spacex" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?internet" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?men" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?boy" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?puppies" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?women" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?girl" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?college" height="140" alt=""></div>
+            <div><img src="https://source.unsplash.com/random/1080x1080/?books" height="140" alt=""></div>
+        </div>
+    </div>
         <div class="menu menu2">
             <div class="posthead profile-main">
                 <div class="profile-icon"><img src="./images/3~2.jpg" alt="" height="55"></div>
@@ -258,6 +286,8 @@
         </div>
 
     </div>
+
+   
     <script src="script.js"></script>
 </body>
 
