--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
             <div><img id="logo" src="./images/Instagram.png" alt="logo"></div>
 
 
-            <div class="menu-bar">
+            <div  id="hover1" class="menu-bar home">
                 <div><img src="./images/home.jpg" alt="home"></div>
-                <div class="text" id="hover1">Home</div>
+                <div class="text">Home</div>
             </div>
-            <div class="menu-bar">
+            <div id="hover2" class="menu-bar find">
                 <div><img src="./images/search.png" alt="search"></div>
-                <div class="text" id="hover2">Search</div>
+                <div class="text">Search</div>
             </div>
-            <div class="menu-bar">
+            <div id="hover3" class="menu-bar">
                 <div><img src="./images/heart.png" alt="notification"></div>
-                <div class="text" id="hover3">Notifications</div>
+                <div class="text">Notifications</div>
             </div>
-            <div class="menu-bar">
+            <div id="hover4" class="menu-bar">
                 <div><img src="./images/messenger.png" alt="chat"></div>
-                <div class="text" id="hover4">Messages</div>
+                <div class="text">Messages</div>
             </div>
-            <div class="menu-bar">
+            <div id="hover5" class="menu-bar">
                 <div><img src="./images/instagram-reels.png" alt="reels"></div>
-                <div class="text" id="hover5">Reels</div>
+                <div class="text">Reels</div>
             </div>
-            <div class="menu-bar">
+            <div id="hover6" class="menu-bar">
                 <div><img src="./images/story.png" alt="add"></div>
-                <div class="text" id="hover6">Create</div>
+                <div class="text">Create</div>
             </div>
-            <div class="menu-bar">
+            <div id="hover7" class="menu-bar">
                 <div><img id="profile" src="./images/3~2.jpg" alt="profile"></div>
-                <div class="text" id="hover7">Profile</div>
+                <div class="text">Profile</div>
             </div>
             <div class="menu-bar bottom">
                 <div><img src="./images/menu.png" alt="menu"></div>
                 <div class="text">More</div>
             </div>
         </div>
-        <div class="menu menu1">
+        <div class="main menu menu1">
             <div class="story">
                 <div class="id" id="svg"><img src="./images/3~2.jpg" alt="">
                     <svg id="sv" height="70" width="70">
@@ -199,7 +199,7 @@
                     <div style="font-size: 15px; opacity: 0.7; cursor: pointer;">Add a comment</div>
                 </div>
             </div>
-        </div>
+        </div> 
          <!-- search page -->
 
     <div class="search">
@@ -245,7 +245,7 @@
                     <li class="profile-loc">Followed by eden_cat</li>
                 </div>
 
-                <div><a href="#">Follow</a></div>
+                <div><a id="follow1" href="#">Follow</a></div>
             </div>
             <div class="posthead">
                 <div class="profile-icon"><img src="./images/elonmusk.jpg" alt="" height="40"></div>
@@ -254,7 +254,7 @@
                     <li class="profile-loc">Followed by 海外か来</li>
                 </div>
 
-                <div><a href="#">Follow</a></div>
+                <div><a id="follow2" href="#">Follow</a></div>
             </div>
             <div class="posthead">
                 <div class="profile-icon"><img src="./images/elonmusk.jpg" alt="" height="40"></div>
@@ -263,7 +263,7 @@
                     <li class="profile-loc">New to Instagram</li>
                 </div>
 
-                <div><a href="#">Follow</a></div>
+                <div><a id="follow3" href="#">Follow</a></div>
             </div>
             <div class="posthead">
                 <div class="profile-icon"><img src="./images/elonmusk.jpg" alt="" height="40"></div>
@@ -272,7 +272,7 @@
                     <li class="profile-loc">Followed by Q_Lines</li>
                 </div>
 
-                <div><a href="#">Follow</a></div>
+                <div><a id="follow4" href="#">Follow</a></div>
             </div>
             <div class="posthead">
                 <div class="profile-icon"><img src="./images/elonmusk.jpg" alt="" height="40"></div>
@@ -281,7 +281,7 @@
                     <li class="profile-loc">New to Instagram</li>
                 </div>
 
-                <div><a href="#">Follow</a></div>
+                <div><a id="follow5" href="#">Follow</a></div>
             </div>
         </div>
 
