--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <div><img src="./images/home.jpg" alt="home"></div>
                 <div class="text">Home</div>
             </div>
-            <div id="hover2" class="menu-bar find">
+            <a class="postman" href="search.html"><div id="hover2" class="menu-bar find">
                 <div><img src="./images/search.png" alt="search"></div>
                 <div class="text">Search</div>
-            </div>
+            </div></a>
             <div id="hover3" class="menu-bar">
                 <div><img src="./images/heart.png" alt="notification"></div>
                 <div class="text">Notifications</div>
@@ -199,35 +199,8 @@
                     <div style="font-size: 15px; opacity: 0.7; cursor: pointer;">Add a comment</div>
                 </div>
             </div>
-        </div> 
-         <!-- search page -->
-
-    <div class="search">
-        <input type="text" placeholder="Search" >
-        <div class="posts">
-            <div><img src="https://source.unsplash.com/random/1080x1080/?cars" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?animals" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?quotes" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?sky" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?space" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?planets" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?nature" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?mountains" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?citys" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?skyscrapers" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?coding" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?robots" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?spacex" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?internet" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?men" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?boy" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?puppies" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?women" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?girl" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?college" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?books" height="140" alt=""></div>
         </div>
-    </div>
+        
         <div class="menu menu2">
             <div class="posthead profile-main">
                 <div class="profile-icon"><img src="./images/3~2.jpg" alt="" height="55"></div>
