--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
                 </div>
                 <div class="postbottom">
                     <div class="bottom_menu">
-                        <div><img src="./images/heart.png" alt="" height="24"></div>
+                        <div><img id="heart" src="./images/heart.png" alt="" height="24"></div>
                         <div><img src="./images/bubble-chat.png" alt="" height="25"></div>
                         <div><img src="./images/send.png" alt="" height="22"></div>
                         <div><img src="./images/bookmark-white.png" alt="" height="21"></div>
                     </div>
-                    <div style="font-size: 15px; font-weight: 700;">2,99,792 likes</div>
+                    <div id="number" style="font-size: 15px; font-weight: 700;">2,99,792 likes</div>
                     <div style="font-size: 15px;"><pr style="margin-right: 5px; font-weight: 700;">Gtr</pr>(K/PGC10) - 1969-1972. • Hakosuka: the box Skyline. </div>
                     <div style="font-size: 15px; opacity: 0.7; cursor: pointer;">View all 1.1M comments</div>
                     <div style="font-size: 15px; opacity: 0.7; cursor: pointer;">Add a comment</div>
