--- a/search.html
+++ b/search.html
@@ -56,7 +56,7 @@
         <div class="search">
         <input type="text" placeholder="Search" autocomplete="on" autofocus>
 
-        <!-- <div class="posts">
+        <div class="posts">
             <div><img src="https://source.unsplash.com/random/1080x1080/?cars" height="140" alt=""></div>
             <div><img src="https://source.unsplash.com/random/1080x1080/?animals" height="140" alt=""></div>
             <div><img src="https://source.unsplash.com/random/1080x1080/?quotes" height="140" alt=""></div>
@@ -78,7 +78,7 @@
             <div><img src="https://source.unsplash.com/random/1080x1080/?girl" height="140" alt=""></div>
             <div><img src="https://source.unsplash.com/random/1080x1080/?college" height="140" alt=""></div>
             <div><img src="https://source.unsplash.com/random/1080x1080/?books" height="140" alt=""></div>
-        </div> -->
+        </div>
     </div>
         <div class="menu menu2">
             <div class="posthead profile-main">
