--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="frame">
-        <div class="menu">
+        <div class="menu menu0">
             <div><img id="logo" src="./images/Instagram.png" alt="logo"></div>
 
 
