--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="frame">
         <div class="menu menu0">
-            <div><img id="logo" src="./images/Instagram.png" alt="logo"></div>
+            <div id="logo-div"><img id="logo" src="./images/Instagram.png" alt="logo"></div>
 
 
             <div id="hover1" class="menu-bar home">
@@ -55,7 +55,13 @@
                 <div class="text">More</div>
             </div>
         </div>
+        <div class="menu-top">
+            <div><img id="logo" src="./images/Instagram.png" alt="logo"></div>
+            <div><img src="./images/heart.png" alt="notification"></div>
+            <div><img src="./images/messenger.png" alt="chat"></div>
+        </div>
         <div class="main menu menu1">
+            
             <div class="story">
                 <div class="id" id="svg"><img src="./images/3~2.jpg" alt="">
                     <svg id="sv" height="70" width="70">
@@ -236,42 +242,22 @@
             </div>
         </div>
         <div class="menu-bottom">
-            <div><img id="logo" src="./images/Instagram.png" alt="logo"></div>
-
-
             <div id="hover1" class="menu-bar home">
                 <div><img src="./images/home.jpg" alt="home"></div>
-                <div class="text">Home</div>
             </div>
             <a class="postman" href="search.html">
                 <div id="hover2" class="menu-bar find">
                     <div><img src="./images/search.png" alt="search"></div>
-                    <div class="text">Search</div>
                 </div>
             </a>
-            <div id="hover3" class="menu-bar">
-                <div><img src="./images/heart.png" alt="notification"></div>
-                <div class="text">Notifications</div>
-            </div>
             <div id="hover4" class="menu-bar">
-                <div><img src="./images/messenger.png" alt="chat"></div>
-                <div class="text">Messages</div>
-            </div>
-            <div id="hover5" class="menu-bar">
-                <div><img src="./images/instagram-reels.png" alt="reels"></div>
-                <div class="text">Reels</div>
+                <div><img src="./images/story.png" alt="add"></div>
             </div>
             <div id="hover6" class="menu-bar">
-                <div><img src="./images/story.png" alt="add"></div>
-                <div class="text">Create</div>
+                <div><img src="./images/instagram-reels.png" alt="reels"></div>
             </div>
             <div id="hover7" class="menu-bar">
                 <div><img id="profile" src="./images/3~2.jpg" alt="profile"></div>
-                <div class="text">Profile</div>
-            </div>
-            <div class="menu-bar bottom">
-                <div><img src="./images/menu.png" alt="menu"></div>
-                <div class="text">More</div>
             </div>
         </div>
 
