--- a/search.html
+++ b/search.html
@@ -15,14 +15,16 @@
 <body>
 
     <div class="frame">
-        <div class="menu">
+        <div class="menu menu0">
             <div><img id="logo" src="./images/Instagram.png" alt="logo"></div>
 
 
-            <a class="postman" href="index.html"><div id="hover1" class="menu-bar home">
-                <div><img src="./images/home.jpg" alt="home"></div>
-                <div class="text">Home</div>
-            </div></a>
+            <a class="postman" href="index.html">
+                <div id="hover1" class="menu-bar home">
+                    <div><img src="./images/home.jpg" alt="home"></div>
+                    <div class="text">Home</div>
+                </div>
+            </a>
             <div id="hover2" class="menu-bar find">
                 <div><img src="./images/search.png" alt="search"></div>
                 <div class="text">Search</div>
@@ -54,32 +56,51 @@
         </div>
 
         <div class="search">
-        <input type="text" placeholder="Search" autocomplete="on" autofocus>
+            <input type="text" placeholder="Search" autocomplete="on" autofocus>
 
-        <div class="posts">
-            <div><img src="https://source.unsplash.com/random/1080x1080/?cars" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?animals" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?quotes" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?sky" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?space" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?planets" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?nature" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?mountains" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?citys" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?skyscrapers" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?coding" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?robots" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?spacex" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?internet" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?men" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?boy" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?puppies" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?women" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?girl" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?college" height="140" alt=""></div>
-            <div><img src="https://source.unsplash.com/random/1080x1080/?books" height="140" alt=""></div>
+            <div class="posts">
+                <img src="https://source.unsplash.com/random/1080x1080/?cars"    alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?animals" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?quotes"  alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?sky"     alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?space"   alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?planets" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?nature"  alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?mountains"   alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?citys"       alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?skyscrapers" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?coding"      alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?robots"      alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?spacex"      alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?internet"    alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?men"         alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?boy"         alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?puppies"     alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?women"       alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?girl"        alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?college"     alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?books"       alt="">
+            </div>
         </div>
-    </div>
+        <div class="menu-bottom">
+            <div id="hover1" class="menu-bar home">
+                <div><img src="./images/home.jpg" alt="home"></div>
+            </div>
+            <a class="postman" href="search.html">
+                <div id="hover2" class="menu-bar find">
+                    <div><img src="./images/search.png" alt="search"></div>
+                </div>
+            </a>
+            <div id="hover4" class="menu-bar">
+                <div><img src="./images/story.png" alt="add"></div>
+            </div>
+            <div id="hover6" class="menu-bar">
+                <div><img src="./images/instagram-reels.png" alt="reels"></div>
+            </div>
+            <div id="hover7" class="menu-bar">
+                <div><img id="profile" src="./images/3~2.jpg" alt="profile"></div>
+            </div>
+        </div>
         <div class="menu menu2">
             <div class="posthead profile-main">
                 <div class="profile-icon"><img src="./images/3~2.jpg" alt="" height="55"></div>
