--- a/search.html
+++ b/search.html
@@ -70,7 +70,7 @@
                 <img src="https://source.unsplash.com/random/1080x1080/?citys"       alt="">
                 <img src="https://source.unsplash.com/random/1080x1080/?skyscrapers" alt="">
                 <img src="https://source.unsplash.com/random/1080x1080/?coding"      alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?robots"      alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?robot"      alt="">
                 <img src="https://source.unsplash.com/random/1080x1080/?spacex"      alt="">
                 <img src="https://source.unsplash.com/random/1080x1080/?internet"    alt="">
                 <img src="https://source.unsplash.com/random/1080x1080/?men"         alt="">
@@ -83,14 +83,15 @@
             </div>
         </div>
         <div class="menu-bottom">
+            <a class="postman" href="index.html">
             <div id="hover1" class="menu-bar home">
                 <div><img src="./images/home.jpg" alt="home"></div>
             </div>
-            <a class="postman" href="search.html">
+            </a>
                 <div id="hover2" class="menu-bar find">
                     <div><img src="./images/search.png" alt="search"></div>
                 </div>
-            </a>
+            
             <div id="hover4" class="menu-bar">
                 <div><img src="./images/story.png" alt="add"></div>
             </div>
